--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2><strong>Welcome to My Page :]</strong></h2>
         <h3><strong>Project name: rianacarrillo_q1gfa1</strong></h3>
         <h4></h4>
-        <a href="https://github.com/rc-carrillooo/rianacarrillo_q1gfa1">Github Project Page :D</a>
+        <a href="https://github.com/rc-carrillooo/rianacarrillo_q1gfa1">Github Project Link :D</a>
         <a href="aboutme.html">About Me!</a>
    
         <div style="background-color: pink;">
